// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Home /> renders as expected when loading 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="title"
      data-testid="title"
    >
      All Books
    </h1>
    <div
      class="container isLoading"
    >
      <div
        class="notification"
        data-testid="loader"
      >
        Loading...
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Home /> renders as expected with data 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="title"
      data-testid="title"
    >
      All Books
    </h1>
    <div
      class="container"
    >
      <div
        class="container"
      >
        <div
          data-testid="book-list-items"
        >
          <div
            class="container"
          >
            <div
              class="details"
            >
              <h2
                class="title"
                data-testid="book-title"
              >
                title
              </h2>
              <div
                class="author"
              >
                by 
                <span
                  data-testid="book-author"
                >
                  author
                </span>
              </div>
              <div
                class="link"
                data-testid="book-link"
              >
                <a
                  href="/id"
                >
                  More Info
                </a>
              </div>
            </div>
            <div
              class="cover"
            >
              <img
                alt="title book cover"
                class="coverImage"
                data-testid="book-image"
                src="cover"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Home /> renders as expected with no data 1`] = `
<DocumentFragment>
  <div>
    <h1
      class="title"
      data-testid="title"
    >
      All Books
    </h1>
    <div
      class="container"
    >
      <div
        class="container"
      >
        <div
          data-testid="empty-book-list"
        >
          <p>
            Sorry, there are no books to display.
          </p>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
